# dev-harness

./: .env.example  .gitignore  README.md  harness.project.toml  harness.toml  harness.toml.example  pyproject.toml
.claude/: launch.json
.harness/prompts/: arch_review.md  dev_task.md  issue_research.md  pr_review.md  triage.md
examples/sample-project/: harness.project.toml
examples/sample-project/.harness/prompts/: dev_task.md
scripts/: dev_dashboard_demo.py
src/harness/: __init__.py  container.py  operations.py
src/harness/adapters/executor/: echo.py  subprocess_executor.py
src/harness/adapters/github/: fake.py  pygithub_adapter.py
src/harness/application/: action_guard.py  coordination.py  loop_runner.py  onboarding.py  overseer.py  ownership.py  preflight.py  schedule_install.py  scheduler.py
src/harness/bots/: discord_bot.py
src/harness/cli/: main.py
src/harness/config/: loader.py  models.py
src/harness/domain/: models.py
src/harness/loops/: arch_review.py  demo.py  dev_task.py  pr_review.py  research.py  triage.py
src/harness/ports/: __init__.py  executor.py  github.py  notifier.py  project_registry.py  run_store.py
src/harness/prompts/: arch_review.md  dev_task.md  pr_review.md  research.md  triage.md
src/harness/util/: atomic.py  prompts.py
src/harness/web/: __init__.py  server.py
tests/: conftest.py
tests/fakes/: __init__.py
tests/integration/: test_arch_review.py  test_cli.py  test_cli_labels_init.py  test_cli_queue.py  test_demo_loop.py  test_dev_loop.py  test_pr_review.py  test_research.py  test_scheduler.py  test_triage.py  test_web_dashboard.py
tests/unit/: test_action_guard.py  test_config_models.py  test_coordination.py  test_discord_notifier.py  test_github_labels.py  test_json_store.py  test_models.py  test_onboarding.py  test_operations.py  test_overseer.py  test_ownership.py  test_pr_review_helpers.py  test_preflight.py  test_prompt_loader.py  test_pygithub_adapter.py  test_registry_write.py  test_schedule_install.py  test_subprocess_executor.py  test_wave_assembly.py
(+8 files in other folders)
