[project]
name = "dev-harness"
version = "0.1.0"
description = "Headless, portable engine that orchestrates AI-assisted development across many repos, coordinating through GitHub with a human verification gate at its core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "jsonschema>=4.21",
    "PyGithub>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# The Discord notifier + bridge bot. Optional so the core engine and the
# fakes-only test path never import discord.py. Install with: uv sync --extra discord
discord = ["discord.py>=2.4"]
# The local observer dashboard (`harness ui`). Optional so the core engine and the
# fakes-only test path never import FastAPI. Install with: uv sync --extra web
web = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
harness = "harness.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-jsonschema>=4.21",
    "httpx>=0.27",          # FastAPI TestClient transport for the dashboard tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live_github'"
markers = [
    "integration: end-to-end demo loop exercised with in-memory fakes",
    "live_github: hits the real GitHub API; skipped unless HARNESS_GITHUB_TOKEN is set",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
packages = ["harness"]

# discord.py is an optional extra (only the bridge bot imports it, lazily).
[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

# fastapi/uvicorn (and their starlette dependency) are the optional `web` extra
# (only the dashboard imports them).
[[tool.mypy.overrides]]
module = ["fastapi.*", "uvicorn.*", "starlette.*"]
ignore_missing_imports = true
